--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
-    android:background="@drawable/login_background"
     tools:context=".CreateAdsActivity">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
@@ -21,149 +21,187 @@
                     app:popupTheme="@style/AppTheme.PopupOverlay" />
         </android.support.design.widget.AppBarLayout>
 
-        <TableRow
-            android:layout_marginTop="20sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
-                <TextView
-                    android:id="@+id/type_of_match_textView"
-                    android:layout_weight="1"
-                    android:textStyle="italic"
-                    android:textSize="20sp"
-                    android:textColor="#FFF"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="@string/match_type"
-                    />
 
-                <Spinner
-                    android:id="@+id/type_of_match_spinner"
-                    android:layout_width="match_parent"
-                    android:textColor="#FFF"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    />
-        </TableRow>
+        <Spinner
+            android:id="@+id/type_of_match_spinner"
+            android:layout_width="141dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:textColor="#68AC61"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
-        <TableRow
-           android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
+
+        <TextView
+            android:id="@+id/set_place_textView"
+            android:layout_width="168dp"
+            android:layout_height="29dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:text="@string/set_place"
+            android:textColor="#68AC61"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button1" />
+
+        <TextView
+            android:id="@+id/set_place_button"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1"
+            android:hint="@string/set_place_button"
+            android:onClick="setTime"
+            android:textColor="#68AC61"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/number_of_player_editText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintStart_toEndOf="@+id/set_place_textView"
+            app:layout_constraintTop_toBottomOf="@+id/button"
+            app:layout_constraintVertical_bias="0.631" />
+
+
+        <Button
+            android:id="@+id/confirm_ads_creation_button"
+            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
+            android:layout_width="226dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#68AC61"
+            android:text="@string/confirm_ads_creation_button"
+            android:textAlignment="center"
+            android:textColor="#FFF"
+            android:textSize="18dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/number_of_player_textView"
+            app:layout_constraintVertical_bias="0.12" />
+
+        <EditText
+            android:id="@+id/number_of_player_editText"
+            android:layout_width="108dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="16dp"
+            android:layout_weight="1"
+            android:inputType="number"
+            android:textColor="#68AC61"
+            app:layout_constraintBottom_toTopOf="@+id/confirm_ads_creation_button"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/number_of_player_textView"
+            android:layout_width="207dp"
+            android:layout_height="31dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:text="@string/number_of_player"
+            android:textColor="#68AC61"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/number_of_player_editText"
+            app:layout_constraintHorizontal_bias="0.615"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/set_place_textView" />
 
         <TextView
             android:id="@+id/set_date_textView"
+            android:layout_width="63dp"
+            android:layout_height="23dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_weight="1"
+            android:text="@string/set_date"
+            android:textColor="#68AC61"
             android:textSize="20sp"
             android:textStyle="italic"
-            android:textColor="#FFF"
-            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/set_place_textView"
+            app:layout_constraintEnd_toStartOf="@+id/button1"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/type_of_match_textView"
+            app:layout_constraintVertical_bias="0.2" />
+
+        <TextView
+            android:id="@+id/set_time_textView"
             android:layout_width="wrap_content"
-            android:text="@string/set_date"
-            />
+            android:layout_height="23dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:text="@string/set_time"
+            android:textColor="#68AC61"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toTopOf="@+id/set_place_button"
+            app:layout_constraintEnd_toStartOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/type_of_match_spinner"
+            app:layout_constraintVertical_bias="0.157" />
+
+        <TextView
+            android:id="@+id/button"
+            android:layout_width="85dp"
+            android:layout_height="26dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_weight="1"
+            android:hint="@string/set_time_button"
+            android:onClick="setTime"
+            android:textColor="#68AC61"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/type_of_match_spinner" />
 
         <TextView
             android:id="@+id/button1"
-            android:textSize="20sp"
-            android:textColor="#FFF"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="86dp"
+            android:layout_height="27dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
+            android:hint="@string/set_date_button"
             android:onClick="setDate"
-            android:hint="@string/set_date_button" />
-</TableRow>
-        <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
+            android:textColor="#FFF"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/set_time_textView"
+            app:layout_constraintTop_toBottomOf="@+id/type_of_match_textView" />
 
-                <TextView
-                    android:id="@+id/set_time_textView"
-                    android:textSize="20sp"
-                    android:textColor="#FFF"
-                    android:layout_weight="1"
-                    android:textStyle="italic"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="@string/set_time"
-                    />
-
-                <TextView
-                    android:id="@+id/button"
-                    android:textSize="20sp"
-                    android:textColor="#FFF"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="setTime"
-                    android:hint="@string/set_time_button" />
-
-
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">
-                <TextView
-                    android:id="@+id/set_place_textView"
-                    android:layout_weight="1"
-                    android:textColor="#FFF"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:textStyle="italic"
-                    android:layout_width="match_parent"
-                    android:text="@string/set_place"
-                    />
-                <TextView
-                    android:id="@+id/set_place_button"
-                    android:textColor="#FFF"
-                    android:layout_width="match_parent"
-                    android:textSize="20sp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="setTime"
-                    android:hint="@string/set_place_button" />
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginRight="30sp">>
-                <TextView
-                    android:id="@+id/number_of_player_textView"
-                    android:layout_weight="1"
-                    android:textColor="#FFF"
-                    android:textSize="20sp"
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"
-                    android:text="@string/number_of_player"
-                    />
-
-                <EditText
-                    android:id="@+id/number_of_player_editText"
-                    android:layout_weight="1"
-                    android:textColor="#FFF"
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"
-                    android:inputType="number"
-                    />
-
-        </TableRow>
-                <Button
-                    android:id="@+id/confirm_ads_creation_button"
-                    style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
-
-                    android:layout_width="match_parent"
-                    android:layout_marginTop="10dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
-                    android:textAlignment="center"
-                    android:textSize="18dp"
-                    android:text="@string/confirm_ads_creation_button"
-                    android:layout_marginLeft="20dp"
-                    android:textColor="#008000" />
-                    />
+        <TextView
+            android:id="@+id/type_of_match_textView"
+            android:layout_width="154dp"
+            android:layout_height="33dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_weight="1"
+            android:text="@string/match_type"
+            android:textColor="#68AC61"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toStartOf="@+id/type_of_match_spinner"
+            app:layout_constraintHorizontal_bias="0.242"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        />
 
 
 
 
 
-</TableLayout>
+</android.support.constraint.ConstraintLayout>
