--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#68AC61">
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TableRow
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="10sp">
+            <ImageView
+                android:id="@+id/plus_image_my_team"
+                android:src="@drawable/add"
+                android:layout_marginStart="20sp"
+                android:layout_height="match_parent"
+                android:layout_width="30sp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:textSize="30sp"
+                android:layout_weight="1"
+                android:layout_marginStart="15sp"
+                android:layout_height="wrap_content"
+                android:text="@string/add_new_team_my_team"
+                android:id="@+id/add_new_team_my_team_text_view"/>
+
+        </TableRow>
+
+    </TableLayout>
+
+    <ListView
+        android:id="@+id/list_view_my_team"
+        android:layout_width="match_parent"
+        android:layout_height="756sp"
+        android:layout_marginBottom="8sp"
+        android:layout_marginEnd="8sp"
+
+        android:layout_marginStart="8sp"
+        android:layout_marginTop="8sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.501" />
+
+
 
 </android.support.constraint.ConstraintLayout>
