--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
@@ -24,179 +24,167 @@
 
         <Spinner
             android:id="@+id/type_of_match_spinner"
-            android:layout_width="141dp"
+            android:layout_width="176dp"
             android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/number_of_player_editText"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
+            android:layout_marginTop="20dp"
             android:textColor="#68AC61"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/set_place_button"
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
 
         <TextView
             android:id="@+id/set_place_textView"
-            android:layout_width="168dp"
-            android:layout_height="29dp"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1"
+            android:layout_marginTop="16dp"
             android:text="@string/set_place"
             android:textColor="#68AC61"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button1" />
+            app:layout_constraintTop_toBottomOf="@+id/set_date_textView" />
 
         <TextView
             android:id="@+id/set_place_button"
             android:layout_width="150dp"
-            android:layout_height="30dp"
+            android:layout_height="27dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_weight="1"
             android:hint="@string/set_place_button"
             android:onClick="setTime"
             android:textColor="#68AC61"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/number_of_player_editText"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintHorizontal_bias="0.466"
             app:layout_constraintStart_toEndOf="@+id/set_place_textView"
             app:layout_constraintTop_toBottomOf="@+id/button"
-            app:layout_constraintVertical_bias="0.631" />
+            app:layout_constraintVertical_bias="0.526" />
 
 
         <Button
             android:id="@+id/confirm_ads_creation_button"
             style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
             android:layout_width="226dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="46dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="211dp"
             android:backgroundTint="#68AC61"
             android:text="@string/confirm_ads_creation_button"
             android:textAlignment="center"
             android:textColor="#FFF"
-            android:textSize="18dp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/number_of_player_textView"
-            app:layout_constraintVertical_bias="0.12" />
+            app:layout_constraintVertical_bias="0.472" />
 
         <EditText
             android:id="@+id/number_of_player_editText"
-            android:layout_width="108dp"
-            android:layout_height="30dp"
-            android:layout_marginBottom="40dp"
+            android:layout_width="107dp"
+            android:layout_height="25dp"
             android:layout_marginEnd="16dp"
-            android:layout_weight="1"
+            android:layout_marginTop="28dp"
             android:inputType="number"
             android:textColor="#68AC61"
-            app:layout_constraintBottom_toTopOf="@+id/confirm_ads_creation_button"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/set_place_button"
+            app:layout_constraintTop_toBottomOf="@+id/set_place_textView" />
 
         <TextView
             android:id="@+id/number_of_player_textView"
             android:layout_width="207dp"
-            android:layout_height="31dp"
+            android:layout_height="30dp"
+            android:layout_above="@+id/confirm_ads_creation_button"
+            android:layout_alignStart="@+id/set_date_textView"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
+            android:layout_marginTop="24dp"
+            android:labelFor="@id/number_of_player_editText"
             android:text="@string/number_of_player"
             android:textColor="#68AC61"
-            android:textSize="20sp"
+            android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="@+id/number_of_player_editText"
-            app:layout_constraintHorizontal_bias="0.615"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/set_place_textView"
             app:layout_constraintTop_toBottomOf="@+id/set_place_textView" />
 
         <TextView
             android:id="@+id/set_date_textView"
             android:layout_width="63dp"
-            android:layout_height="23dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_weight="1"
+            android:layout_height="26dp"
+            android:layout_marginTop="20dp"
             android:text="@string/set_date"
             android:textColor="#68AC61"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@+id/set_place_textView"
-            app:layout_constraintEnd_toStartOf="@+id/button1"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/type_of_match_textView"
-            app:layout_constraintVertical_bias="0.2" />
+            app:layout_constraintStart_toStartOf="@+id/set_place_textView"
+            app:layout_constraintTop_toBottomOf="@+id/type_of_match_textView" />
 
         <TextView
             android:id="@+id/set_time_textView"
             android:layout_width="wrap_content"
             android:layout_height="23dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:text="@string/set_time"
             android:textColor="#68AC61"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@+id/set_place_button"
+            app:layout_constraintBottom_toBottomOf="@+id/set_date_textView"
             app:layout_constraintEnd_toStartOf="@+id/button"
             app:layout_constraintTop_toBottomOf="@+id/type_of_match_spinner"
-            app:layout_constraintVertical_bias="0.157" />
+            app:layout_constraintVertical_bias="0.272" />
 
         <TextView
             android:id="@+id/button"
             android:layout_width="85dp"
             android:layout_height="26dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:hint="@string/set_time_button"
             android:onClick="setTime"
             android:textColor="#68AC61"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="@+id/set_place_button"
             app:layout_constraintTop_toBottomOf="@+id/type_of_match_spinner" />
 
         <TextView
             android:id="@+id/button1"
             android:layout_width="86dp"
             android:layout_height="27dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_weight="1"
+            android:layout_marginEnd="4dp"
+            android:layout_marginTop="24dp"
             android:hint="@string/set_date_button"
             android:onClick="setDate"
             android:textColor="#FFF"
-            android:textSize="20sp"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/button"
             app:layout_constraintEnd_toStartOf="@+id/set_time_textView"
-            app:layout_constraintTop_toBottomOf="@+id/type_of_match_textView" />
+            app:layout_constraintTop_toBottomOf="@+id/type_of_match_textView"
+            app:layout_constraintVertical_bias="0.666" />
 
         <TextView
             android:id="@+id/type_of_match_textView"
-            android:layout_width="154dp"
-            android:layout_height="33dp"
+            android:layout_width="115dp"
+            android:layout_height="27dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:layout_weight="1"
             android:text="@string/match_type"
             android:textColor="#68AC61"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textStyle="italic"
             app:layout_constraintEnd_toStartOf="@+id/type_of_match_spinner"
-            app:layout_constraintHorizontal_bias="0.242"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/set_place_textView"
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
         />
 
@@ -204,4 +192,4 @@
 
 
 
-</android.support.constraint.ConstraintLayout>
+</>
