--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_settings.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_settings.xml
@@ -12,49 +12,57 @@
         style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
         android:layout_width="157dp"
         android:layout_height="32dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
         android:text="Elimina account"
         android:textAlignment="center"
         android:textColor="#68AC61"
+        app:layout_constraintEnd_toEndOf="@+id/button_modifica_password"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        tools:layout_editor_absoluteY="118dp" />
+        app:layout_constraintTop_toBottomOf="@+id/button_modifica_password" />
 
     <Button
         android:id="@+id/button_modifica_password"
         style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
         android:layout_width="160dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="36dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
         android:layout_weight="1"
         android:text="Modifica password"
         android:textColor="#68AC61"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        tools:layout_editor_absoluteY="31dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="23dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:layout_weight="2"
         android:text="Modifica password:"
         android:textColor="#fff"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="31dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="145dp"
         android:layout_height="23dp"
+        android:layout_marginTop="36dp"
         android:layout_weight="1"
         android:text="Elimina account:"
         android:textColor="#fff"
         android:textSize="15dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="118dp" />/>
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />/>
 
 
 </android.support.constraint.ConstraintLayout>
