--- a/TESI/WhoPlays/app/src/main/res/layout/activity_create_team.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_create_team.xml
@@ -20,4 +20,61 @@
             app:popupTheme="@style/AppTheme.AppBarOverlay" />
     </android.support.design.widget.AppBarLayout>
 
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="100sp"
+        android:paddingStart="10sp"
+        android:paddingEnd="10sp">
+
+        <TableRow
+            android:layout_marginTop="10sp">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="40sp"
+                    android:hint="Nome squadra"/>
+                <EditText
+                    android:layout_marginTop="10sp"
+                    android:textSize="40sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Colori sociali"/>
+            </LinearLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="10sp">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="40sp"
+                android:hint="Presidente/Fondatore"
+                android:layout_span="2"/>
+        </TableRow>
+        <TableRow
+            android:layout_marginTop="10sp">
+            <EditText
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:hint="Data fondazione"
+                android:textSize="40sp"
+                android:layout_weight="1"
+                android:layout_span="2"/>
+        </TableRow>
+
+    </TableLayout>
+
+
+
 </android.support.constraint.ConstraintLayout>
