--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
@@ -9,7 +9,33 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/tableLayout1">
+
+
+        <TableRow
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="10sp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/plus_image_my_team1"
+                android:src="@drawable/add"
+                android:layout_marginStart="20sp"
+                android:layout_height="match_parent"
+                android:layout_width="30sp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:textSize="30sp"
+                android:layout_weight="1"
+                android:textColor="#000000"
+                android:layout_marginStart="15sp"
+                android:layout_height="wrap_content"
+                android:text="@string/search_team_my_team_text_view"
+                android:id="@+id/search_team_my_team_text_view"/>
+
+        </TableRow>
+
         <TableRow
             android:layout_marginTop="5sp"
             android:layout_marginBottom="10sp">
@@ -24,6 +50,7 @@
                 android:layout_width="match_parent"
                 android:textSize="30sp"
                 android:layout_weight="1"
+                android:textColor="#000000"
                 android:layout_marginStart="15sp"
                 android:layout_height="wrap_content"
                 android:text="@string/add_new_team_my_team"
@@ -31,17 +58,14 @@
 
         </TableRow>
 
+
     </TableLayout>
 
     <ListView
         android:id="@+id/list_view_my_team"
         android:layout_width="match_parent"
-        android:layout_height="756sp"
-        android:layout_marginBottom="8sp"
-        android:layout_marginEnd="8sp"
+        android:layout_height="wrap_content"
 
-        android:layout_marginStart="8sp"
-        android:layout_marginTop="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
