--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
@@ -186,10 +186,10 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/set_place_textView"
             app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
-        />
 
 
 
 
 
-</>
+</android.support.constraint.ConstraintLayout>
+
