--- a/TESI/WhoPlays/app/src/main/res/layout/activity_newpassword.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_newpassword.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="76dp"
         android:ems="10"
-        android:hint="Inserisci vecchia passowrd"
+        android:hint="Inserisci vecchia password"
         android:inputType="textPassword"
         android:textColor="#FFF"
         android:textColorHint="#FFF"
