--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_calendar.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_calendar.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background">
+    android:background="#68AC61">
 
     <TextView
         android:id="@+id/title_list_calendar"
@@ -18,7 +18,7 @@
 
         android:divider="#FFF"
         android:dividerHeight="3dp"
-        android:listSelector="#008000"
+        android:listSelector="#68AC61"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listViewCalendar"/>
