--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_create_ads.xml
@@ -89,11 +89,11 @@
         <EditText
             android:id="@+id/number_of_player_editText"
             android:layout_width="107dp"
-            android:layout_height="25dp"
+            android:layout_height="30dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="24dp"
             android:inputType="number"
-            android:textColor="#68AC61"
+            android:textColorHint="#68AC61"
             app:layout_constraintEnd_toEndOf="@+id/set_place_button"
             app:layout_constraintTop_toBottomOf="@+id/set_place_textView" />
 
