--- a/TESI/WhoPlays/app/src/main/res/layout/app_bar_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/app_bar_who_plays.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="#FFF"
-        app:srcCompat="@drawable/add" />
+        app:backgroundTint="#008000"
+        app:srcCompat="@drawable/new_player" />
 
 </android.support.design.widget.CoordinatorLayout>
