--- a/TESI/WhoPlays/app/src/main/res/drawable/my_button_bg.xml
+++ b/TESI/WhoPlays/app/src/main/res/drawable/my_button_bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#FFF"
-        android:endColor="#FFF"
+    <gradient android:startColor="#68ac61"
+        android:endColor="#68ac61"
         android:angle="270" />
     <corners android:radius="3dp" />
     <stroke android:width="0px" android:color="#000000" />
