--- a/TESI/WhoPlays/app/src/main/res/layout/activity_create_team.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_create_team.xml
@@ -29,10 +29,10 @@
 
         <TableRow
             android:layout_marginTop="10sp">
-            <ImageView
+            <ImageButton
+                android:contentDescription="add photo"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"/>
+                android:layout_height="match_parent"/>
             <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
@@ -41,11 +41,15 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="40sp"
+                    android:textColorHint="#68ac61"
+                    android:textColor="#68ac61"
+                    android:textSize="30sp"
                     android:hint="Nome squadra"/>
                 <EditText
                     android:layout_marginTop="10sp"
-                    android:textSize="40sp"
+                    android:textSize="30sp"
+                    android:textColorHint="#68ac61"
+                    android:textColor="#68ac61"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Colori sociali"/>
@@ -57,8 +61,10 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#68ac61"
                 android:layout_weight="1"
-                android:textSize="40sp"
+                android:textColorHint="#68ac61"
+                android:textSize="30sp"
                 android:hint="Presidente/Fondatore"
                 android:layout_span="2"/>
         </TableRow>
@@ -67,10 +73,28 @@
             <EditText
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:textColor="#68ac61"
                 android:hint="Data fondazione"
-                android:textSize="40sp"
+                android:textColorHint="#68ac61"
+                android:textSize="30sp"
                 android:layout_weight="1"
                 android:layout_span="2"/>
+        </TableRow>
+
+        <TableRow
+            android:gravity="center_horizontal"
+            android:layout_marginTop="25sp">
+            <Button
+
+
+                android:id="@+id/save_data_create_team_button"
+                android:text="@string/create_team_create_team_button"
+                android:padding="10sp"
+                android:textColor="#FFF"
+                android:textSize="30sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_button_bg"/>
         </TableRow>
 
     </TableLayout>
