--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
@@ -5,24 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#68AC61">
+    android:background="#FFF">
 
 
     <ListView
         android:id="@+id/listViewWhoPlays"
-        android:layout_width="match_parent"
-        android:layout_height="756sp"
-        android:layout_marginBottom="8sp"
-        android:layout_marginEnd="8sp"
-
-        android:layout_marginStart="8sp"
-        android:layout_marginTop="8sp"
+        android:layout_width="422dp"
+        android:layout_height="782dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.096"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.501" />
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
