modificato le card

--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_who_plays.xml
@@ -10,8 +10,8 @@
 
     <ListView
         android:id="@+id/listViewWhoPlays"
-        android:layout_width="422dp"
-        android:layout_height="782dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.096"
