--- a/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/listview_item_who_plays.xml
@@ -11,79 +11,94 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="106dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginStart="1dp"
         android:visibility="visible"
         card_view:cardBackgroundColor="#FFF"
-        card_view:cardCornerRadius="4dp"
         card_view:cardElevation="15dp"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:minHeight="@dimen/cardview_default_elevation"
-            android:minWidth="@dimen/cardview_default_radius">
 
-            <TextView
-                android:id="@+id/itemPlaceWhoPlaysTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:layout_marginStart="16dp"
-                android:text="@string/item_place_who_plays"
-                android:textColor="#68AC61"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                card_view:layout_constraintBaseline_toBaselineOf="@+id/itemDateWhoPlaysTextView"
-                card_view:layout_constraintStart_toStartOf="parent" />
 
-            <TextView
-                android:id="@+id/itemCreatorWhoPlaysTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="22dp"
-                android:layout_marginEnd="68dp"
-                android:text="@string/item_creator_who_plays"
-                android:textColor="#68AC61"
-                android:textSize="18sp"
-                android:textStyle="italic|bold"
-                card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintTop_toBottomOf="@+id/itemPlaceWhoPlaysTextView" />
-
-            <TextView
-                android:id="@+id/itemDateWhoPlaysTextView"
-                android:layout_width="90dp"
-                android:layout_height="25dp"
-                android:layout_marginBottom="40dp"
-                android:layout_marginStart="12dp"
-                android:text="@string/item_date_who_plays"
-                android:textColor="#68AC61"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                card_view:layout_constraintBottom_toBottomOf="parent"
-                card_view:layout_constraintStart_toEndOf="@+id/itemPlaceWhoPlaysTextView" />
-
-            <TextView
-                android:id="@+id/itemTypeWhoPlaysTextView"
+            <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_span="3"
-                android:layout_weight="1"
-                android:text="@string/item_type_who_plays"
-                android:textColor="#68AC61"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                card_view:layout_constraintEnd_toEndOf="parent"
-                card_view:layout_constraintHorizontal_bias="0.421"
-                card_view:layout_constraintStart_toStartOf="parent"
-                card_view:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+                android:layout_height="wrap_content"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginEnd="3dp">
+                <TableRow>
 
+                    <ImageView
+                        android:layout_height="match_parent"
+                        android:layout_width="60dp"
+                        android:padding="1dp"
+                        android:src="@drawable/icon"
+                        android:layout_marginEnd="4dp"/>
+
+                    <LinearLayout
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/itemTypeWhoPlaysTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="30dp"
+                            android:layout_span="3"
+                            android:layout_weight="1"
+                            android:text="@string/item_type_who_plays"
+                            android:textColor="#000"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            />
+
+                        <TableLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TableRow>
+                                <TextView
+                                    android:id="@+id/itemPlaceWhoPlaysTextView"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/item_place_who_plays"
+                                    android:textColor="#000"
+                                    android:textSize="18sp" />
+
+                                <TextView
+                                    android:id="@+id/itemDateWhoPlaysTextView"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/item_date_who_plays"
+                                    android:textColor="#000"
+                                    android:textSize="18sp"/>
+
+                                <TextView
+                                    android:id="@+id/itemCreatorWhoPlaysTextView"
+                                    android:layout_width="match_parent"
+                                    android:layout_weight="1"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/item_creator_who_plays"
+                                    android:textColor="#000"
+                                    android:textSize="18sp"
+                                    android:textStyle="italic"/>
+
+                            </TableRow>
+
+                        </TableLayout>
+
+                    </LinearLayout>
+
+                </TableRow>
+
+            </TableLayout>
+
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
